--- a/renovate.json
+++ b/renovate.json
@@ -4,14 +4,25 @@
     "config:base"
   ],
   "enabledManagers": ["regex"],
+  "hostRules": [
+    {
+      "matchHost": "https://github.com/TOwens1987/testtool",
+      "token": "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"
+    }
+  ],
 
   "packageRules": [
     {
-      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
-      "matchPaths": ["**/terragrunt.hcl"],
-      "additionalBranchPrefix": "tools-4",
-      "matchPackageNames": ["TOwens1987/<<nameoftool>>"],
-      "groupName": "dev-prime"
+      "matchDatasources": ["github-releases"],
+      "matchPackageNames": ["releases"],
+      "groupName": "tools",
+      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
+    },
+    {
+      "matchDatasources": ["github-tags"],
+      "matchPackageNames": ["releases"],
+      "groupName": "tools",
+      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
   ],
 
@@ -20,65 +31,26 @@
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "\\s*(?<nameoftool>.*):\\n\\s*revision:\\s(?<currentValue>.*)"
+        "revision =\\s\"(?<currentValue>.*\\d)"
       ],
       "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/<<nameoftool>>",
+      "packageNameTemplate": "TOwens1987/GitVersioning",
       "depNameTemplate": "GitVersioning Update",
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     },
-
     {
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "\\s*(?<nameoftool>.*):\\n\\s*revision:\\s(?<currentValue>.*)"
+        "revision =\\s\"(?<currentValue>.*\\d)"
       ],
-      "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/{{nameoftool}}",
+      "datasourceTemplate": "github-tags",
+      "packageNameTemplate": "TOwens1987/GitVersioning",
       "depNameTemplate": "GitVersioning Update",
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     }
   ],
 
-  "customManagers": [
-    {
-      "customType": "regex",
-      "fileMatch": ["toolVersions.adoc$"],
-      "datasourceTemplate": "custom.tool-{{depName}}",
-      "matchStrings": [
-        "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
-      ],
-      "packageNameTemplate": "releases4",
-      "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
-    },
-       {
-      "customType": "regex",
-      "fileMatch": ["toolVersions.adoc$"],
-      "datasourceTemplate": "custom.tool-{{depName}}",
-      "matchStrings": [
-        "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
-      ],
-      "packageNameTemplate": "releases-2",
-      "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
-    }
-  ],
-  "customDatasources": {
-    "tool-GitVersioning": {
-      "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
-      "format": "plain",
-      "transformTemplates": [
-        "{\"releases\": [$map($filter(releases, function($v) {$contains($v.version, /^appVersion:/)}), function($v) {$v})]}\n"
-      ]
-    },
-    "tool-testtool": {
-      "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/testtool/main/chart.yaml",
-      "format": "plain",
-      "transformTemplates": [
-        "{\"releases\": [$map($filter(releases, function($v) {$contains($v.version, /^appVersion:/)}), function($v) {$v})]}\n"
-      ]
-    }
   }
-}
