testing multiple try 9

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
     },
     {
       "matchDatasources": ["github-tags"],
-      "groupName": "tools",
+      "groupName": "tools-prime",
     }
   ],
 
